tests/NormalTests/paczka1/small_fuzzy/34459233.err
Error in line 1: pXAtAQYvGN S596 82,0
Error in line 9: 64ruyot S184 41,9
